# kmip-protocol

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Changelog.md  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  coverage.yml
benches/: benchmark.rs
docs/: crates.js  search-index.js  settings.html  source-files.js
docs/implementors/core/clone/: trait.Clone.js
docs/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
docs/implementors/core/convert/: trait.From.js
docs/implementors/core/default/: trait.Default.js
docs/implementors/core/fmt/: trait.Debug.js  trait.Display.js
docs/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
docs/implementors/serde/de/: trait.Deserialize.js
docs/implementors/serde/ser/: trait.Serialize.js
docs/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
docs/kmip/: all.html  index.html  struct.Config.html
docs/kmip/auth/: enum.CredentialType.html  index.html  sidebar-items.js  struct.UsernameAndPasswordCredential.html
docs/kmip/client/: enum.Error.html  index.html  sidebar-items.js  struct.Client.html  struct.ClientBuilder.html  type.Result.html
docs/kmip/request/: fn.to_vec.html  index.html  sidebar-items.js
docs/kmip/response/: fn.from_slice.html  index.html  sidebar-items.js
docs/kmip/types/: index.html  sidebar-items.js
docs/kmip/types/common/: enum.AttributeValue.html  enum.BlockCipherMode.html  enum.CertificateType.html  enum.CryptographicAlgorithm.html  enum.CryptographicUsageMask.html  enum.DigitalSignatureAlgorithm.html  enum.HashingAlgorithm.html  enum.KeyCompressionType.html  enum.KeyFormatType.html  enum.KeyMaterial.html  enum.KeyRoleType.html  enum.LinkType.html  enum.NameType.html  enum.ObjectType.html  enum.Operation.html  enum.PaddingMethod.html  enum.RevocationReasonCode.html  enum.State.html  index.html  sidebar-items.js  struct.ApplicationData.html  struct.ApplicationNamespace.html  struct.AttributeIndex.html  struct.AttributeName.html  struct.CompromiseOccurrenceDate.html  struct.CounterLength.html  struct.CryptographicLength.html  struct.CryptographicParameters.html  struct.Data.html  struct.DataLength.html  struct.FixedFieldLength.html  struct.IVLength.html  struct.InitialCounterValue.html  struct.InvocationFieldLength.html  struct.LinkedObjectIdentifier.html  struct.NameValue.html  struct.RandomIV.html  struct.RevocationMessage.html  struct.TagLength.html  struct.TransparentDHPrivateKey.html  (+8 more)
docs/kmip/types/request/: enum.CredentialType.html  enum.CredentialValue.html  enum.ManagedObject.html  enum.QueryFunction.html  enum.RequestPayload.html  enum.WrappingMethod.html  index.html  sidebar-items.js  struct.Attribute.html  struct.Authentication.html  struct.BatchCount.html  struct.BatchItem.html  struct.CommonTemplateAttribute.html  struct.Credential.html  struct.EncryptionKeyInformation.html  struct.IVOrCounterOrNonce.html  struct.KeyBlock.html  struct.KeyValue.html  struct.KeyWrappingData.html  struct.KeyWrappingSpecification.html  struct.MACOrSignature.html  struct.MACOrSignatureKeyInformation.html  struct.MaximumResponseSize.html  struct.Name.html  struct.Password.html  struct.PrivateKey.html  struct.PrivateKeyTemplateAttribute.html  struct.ProtocolVersion.html  struct.ProtocolVersionMajor.html  struct.ProtocolVersionMinor.html  struct.PublicKey.html  struct.PublicKeyTemplateAttribute.html  struct.RequestHeader.html  struct.RequestMessage.html  struct.RevocationReason.html  struct.SymmetricKey.html  struct.Template.html  struct.TemplateAttribute.html  struct.Username.html
docs/kmip/types/response/: enum.ManagedObject.html  enum.ResponsePayload.html  enum.ResultReason.html  enum.ResultStatus.html  index.html  sidebar-items.js  struct.Attribute.html  struct.AttributeEditResponsePayload.html  struct.BatchItem.html  struct.Certificate.html  struct.CreateKeyPairResponsePayload.html  struct.CreateResponsePayload.html  struct.DiscoverVersionsResponsePayload.html  (+28 more)
docs/krill_kmip_protocol/: all.html  index.html  sidebar-items.js  struct.Config.html
docs/krill_kmip_protocol/auth/: enum.CredentialType.html  index.html  struct.UsernameAndPasswordCredential.html
docs/krill_kmip_protocol/client/: enum.Error.html  index.html  struct.Client.html  struct.ClientBuilder.html  type.Result.html
docs/krill_kmip_protocol/request/: fn.to_vec.html  index.html
docs/krill_kmip_protocol/response/: fn.from_slice.html  index.html
docs/krill_kmip_protocol/types/: index.html
docs/src/kmip/: auth.rs.html  client.rs.html  lib.rs.html  request.rs.html  response.rs.html
docs/src/krill_kmip_protocol/: auth.rs.html  client.rs.html  lib.rs.html  request.rs.html  response.rs.html
examples/: cli-tool.rs  diag_to_txt.rs  hex_to_txt.rs
examples/demo/: README.md  config.rs  main.rs  util.rs
src/: auth.rs  client.rs  lib.rs  request.rs  response.rs  tag_map.rs
src/client/: async_pool.rs  client.rs  config.rs  mod.rs  sync_pool.rs
src/client/tls/: async_tls.rs  mod.rs  openssl.rs  rustls.rs  tokio_native_tls.rs  tokio_rustls.rs
src/de/: mod.rs
src/tests/: handle_unspecified_input.rs  kmip_10_query_use_case_12_1.rs  kmip_10_use_case_11_1_access_control.rs  kmip_10_use_case_12_1_query.rs  kmip_10_use_case_3_1_basic_functionality.rs  kmip_10_use_case_4_1_key_lifecycle.rs  kmip_10_use_case_8_1_create_key_pair.rs  kmip_11_test_case_12_1_query.rs  kmip_11_test_case_16_1_discover_versions.rs  kmip_11_test_case_17_1_attribute_handling.rs  kmip_13_test_case_5_9_8_1_CS_AC_M_1_13.rs  kmip_13_test_case_5_9_9_1_CS_RNG_M_1_13.rs  locate_key_by_name_and_type.rs  mod.rs  rngretrieve.rs  timestamp_support.rs
src/tls/: async_tls.rs  client.rs  config.rs  mod.rs  openssl.rs  rustls.rs  rustls_common.rs  tokio_native_tls.rs  tokio_rustls.rs  util.rs
src/tls/impls/: async_tls.rs  mod.rs  openssl.rs  rustls.rs  tokio_native_tls.rs  tokio_rustls.rs
src/ttlv/: fast_scan.rs  format.rs  mod.rs  types.rs
src/types/: common.rs  mod.rs  request.rs  response.rs  traits.rs
tests/: roundtrip_ttlv.rs
(+142 files in other folders)
