[package]
name = "kmip-protocol"
version = "0.1.1-dev"
authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
edition = "2018"
description = "KMIP protocol object (de)serialization"
repository = "https://github.com/NLnetLabs/kmip/"
license = "BSD-3-Clause"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
exclude = ["/.github"]
readme = "README.md"
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-std = { version = "1.10.0", features = ["attributes"], optional = true }
async-tls = { version = "0.11.0", default-features = false, features = ["client"], optional = true }
cfg-if = "1.0.0"
enum-display-derive = "0.1.1"
enum-flags = "0.1.6"
#kmip-ttlv = { version = "0.3.0", default-features = false }
kmip-ttlv = { path = "../krill-kmip-ttlv", default-features = false }
log = "0.4.14"
maybe-async = "0.2.6"
openssl = { version = "0.10.35", optional = true }
rustls = { version = "0.19.1", features = ["dangerous_configuration"], optional = true }
rustls-pemfile = {version = "0.2.1", optional = true }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"
tokio = { version = "1.11.0", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
trait-set = "0.2.0"
webpki = {version = "0.21.4", optional = true }

[features]
default = ["sync"]
sync = ["kmip-ttlv/high-level", "maybe-async/is_sync", "kmip-ttlv/sync"]
async-with-tokio = ["kmip-ttlv/high-level", "tokio", "kmip-ttlv/async-with-tokio"]
async-with-async-std = ["kmip-ttlv/high-level", "async-std", "rustls", "kmip-ttlv/async-with-async-std"]
tls-with-openssl = ["sync", "openssl"]
tls-with-rustls = ["sync", "rustls", "rustls-pemfile", "webpki"]
tls-with-tokio-native-tls = ["async-with-tokio", "tokio-native-tls"]
# todo: add tls-with-tokio-rustls
tls-with-async-tls = ["async-with-async-std", "async-tls", "rustls-pemfile", "webpki" ]

[build-dependencies]
rustc_version   = "0.4.0"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "0.7.2"

# for examples/demo
log = "0.4.14"
simple-logging = "2.0.2"
structopt = "0.3.22"
