[package]
name = "kmip-protocol"
version = "0.5.0"
authors = ["The NLnet Labs RPKI Team <rpki-team@nlnetlabs.nl>"]
edition = "2024"
description = "KMIP protocol object (de)serialization"
repository = "https://github.com/NLnetLabs/kmip/"
documentation = "https://docs.rs/kmip-protocol/"
license = "BSD-3-Clause"
keywords = ["KMIP", "TTLV", "serde", "serialization"]
categories = ["cryptography", "data-structures", "encoding", "parser-implementations"]
exclude = ["/.github"]
readme = "README.md"
rust-version = "1.88.0"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bb8 = { version = "0.9.0", optional = true }
cfg-if = "1.0.0"
enum-display-derive = "0.1.1"
bitflags = "2.7.0"
kmip-ttlv = { git = "https://github.com/NLnetLabs/kmip-ttlv", branch = "next", version = "0.4.0", default-features = false }
hex = { version = "0.4.3" }
log = "0.4.14"
maybe-async = "0.2.6"
openssl = { version = "0.10.35", optional = true }
r2d2 = { version = "0.8.10", optional = true }
rustls = { version = "0.23.31", default-features = false, features = ["std", "logging", "tls12", "ring"], optional = true }
rustls-pemfile = {version = "0.2.1", optional = true }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"
tokio = { version = "1.13.1", features = ["full"], optional = true }
tokio-native-tls = { version = "0.3.0", optional = true }
tokio-rustls = { version = "0.26.4", optional = true }
tracing = "0.1.41"
webpki = {version = "0.22.4", optional = true }
webpki-roots = { version = "1", optional = true }
enum-ordinalize = "4.3.0"
proptest = { version = "1.9.0", optional = true }

[features]
default = ["sync"]
sync = ["kmip-ttlv/high-level", "maybe-async/is_sync", "kmip-ttlv/sync", "sync-pool"]
sync-pool = ["r2d2"]
async-with-tokio = ["kmip-ttlv/high-level", "tokio", "kmip-ttlv/async-with-tokio", "async-pool"]
async-pool = ["bb8"]
tls = []
tls-with-openssl = ["tls", "sync", "openssl"]
tls-with-openssl-vendored = ["tls", "sync", "openssl/vendored"]
tls-with-rustls = ["tls", "sync", "rustls", "rustls-pemfile", "webpki-roots"]
tls-with-tokio-native-tls = ["tls", "async-with-tokio", "tokio-native-tls"]
tls-with-tokio-rustls = ["tls", "async-with-tokio", "tokio-rustls", "rustls-pemfile", "webpki-roots"]
proptest = ["dep:proptest"]

[[example]]
name = "demo"
required-features = ["tls"]
test = false

[[test]]
name = "roundtrip_ttlv"
required-features = ["proptest"]

[build-dependencies]
rustc_version   = "0.4.0"

[dev-dependencies]
hex = "0.4.3"
pretty_assertions = "1.3.0"

# for examples/demo
log = "0.4.14"
simple-logging = "2.0.2"
structopt = { version = "0.3.22", default-features = false }
